--- a/style.css
+++ b/style.css
@@ -1,7 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 body{
     background-color: #f5efdc;
 }
 
 h1{
     text-align: center;
+    font-family: "Abril Fatface", serif;
+    color: #3e6641;
+    font-size: 5em;
+}
+
+.about {
+    display: flex;  
+    align-items: flex-start;
+    gap: 20px;
+    margin-right: 30px;
+}
+
+.about h2{
+    text-align: center;
+    font-family: "Abril Fatface", serif;
+    color: #3e6641;
+    font-size: 3em;
+    margin-bottom: 10px;
+}
+
+.doodles{
+    width: 200px;
+    height: auto; 
+    margin: 0 auto;
+    flex-shrink: 0;
+}
+
+#about-text {
+    display: flex;  /* Make the text container a flexbox container */
+    flex-direction: column; /* Stack the content vertically */
+    gap: 10px; /* Add space between the text items */
+}
+
+#about-text h2,
+#about-text p,
+#about-text ul {
+    margin: 0;
+}
+
+#about-text ul {
+    list-style-type: disc;  /* Bulleted list */
+    padding-left: 20px;  /* Add indentation to list items */
 }
