--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ h1{
 
 #about-text {
     display: flex;  /* Make the text container a flexbox container */
-    flex-direction: column; /* Stack the content vertically */
+    flex-direction: column;
     gap: 10px; 
 }
 
