--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
+/* Green color code: #3e6641;*/
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 body{
     background-color: #f5efdc;
 }
@@ -9,14 +11,25 @@ h1{
     color: #3e6641;
     font-size: 5em;
 }
-
-.about {
-    display: flex;  
-    align-items: flex-start;
-    gap: 20px;
-    margin-right: 30px;
+p {
+    font-family: "Source Sans 3", serif;
 }
 
+ul{
+    font-family: "Source Sans 3", serif;
+}
+/*Style for "about" div*/
+.about {
+    display: flex;  
+    /* align-items: flex-start; */
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-right: 100px;
+    margin-left: 100px;
+}
+
+/*Style for header2 in about secion*/
 .about h2{
     text-align: center;
     font-family: "Abril Fatface", serif;
@@ -25,6 +38,17 @@ h1{
     margin-bottom: 10px;
 }
 
+.about p{
+    color: #3e6641;
+    font-weight: 500;
+}
+
+.about ul{
+    color: #3e6641;
+    font-weight: 500;
+}
+
+/*Style for doodles, such as the cartoon self*/
 .doodles{
     width: 200px;
     height: auto; 
@@ -32,8 +56,9 @@ h1{
     flex-shrink: 0;
 }
 
+/*Style for text in about section*/
 #about-text {
-    display: flex;  /* Make the text container a flexbox container */
+    display: flex;
     flex-direction: column;
     gap: 10px; 
 }
