--- a/style.css
+++ b/style.css
@@ -1,6 +1,47 @@
 /* Green color code: #3e6641;*/
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+header {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 30px 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header li, a, button{
+    font-family: "Source Sans 3", serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #3e6641;
+    text-decoration: none;
+}
+.nav_links{
+    list-style: none;
+}
+.nav_links li{
+    display: inline-block;
+    padding: 0px 20px;
+}
+.nav_links li a {
+    transition: all 0.3s ease 0s;
+}
+.nav_links li a:hover{
+    color: #5e9d62;
+}
+button{
+    padding: 9px 25px;
+    color: #c0e2c2;
+    background-color: rgba(62,102,65,1); /*we use rgba because we are dealing with opactiy changes with the button*/
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+
+}
+button:hover{
+    background-color: rgba(62,102,65,0.8);
+}
 body{
     background-color: #f5efdc;
 }
@@ -69,7 +110,7 @@ ul{
     margin: 0;
 }
 
-#about-text ul {
+/* #about-text ul {
     list-style-type: disc;  /* Bulleted list */
     padding-left: 20px;  /* Add indentation to list items */
-}
+} */
