--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header li, a, button{
 }
 button{
     padding: 9px 25px;
-    color: #c0e2c2;
+    color: #5e9d62;
     background-color: rgba(62,102,65,1); /*we use rgba because we are dealing with opactiy changes with the button*/
     border: none;
     border-radius: 50px;
@@ -66,8 +66,8 @@ ul{
     align-items: center;
     flex-wrap: wrap;
     gap: 20px;
-    margin-right: 100px;
-    margin-left: 100px;
+    margin-right: 10%;
+    margin-left: 10%;
 }
 
 /*Style for header2 in about secion*/
@@ -109,8 +109,3 @@ ul{
 #about-text ul {
     margin: 0;
 }
-
-/* #about-text ul {
-    list-style-type: disc;  /* Bulleted list */
-    padding-left: 20px;  /* Add indentation to list items */
-} */
