--- a/style.css
+++ b/style.css
@@ -1,25 +1,105 @@
 /* Green color code: #3e6641;*/
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing:border-box;
+}
 header {
-    box-sizing: border-box;
+    /* box-sizing: border-box;
     margin: 0;
     padding: 30px 10%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; */
+    background-color: #3e6641;
 }
-header li, a, button{
+header li, a{
     font-family: "Source Sans 3", serif;
     font-weight: 500;
     font-size: 16px;
-    color: #3e6641;
+    color: #f5efdc;
     text-decoration: none;
 }
-.nav_links{
+li{
     list-style: none;
 }
-.nav_links li{
+
+.navbar{
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 24px;
+}
+
+.nav-menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 60px;
+}
+
+.nav-link:hover{
+    color: #7e8f64;
+}
+
+.hamburger{
+    display: none;
+    cursor: pointer;
+}
+
+.bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: white;
+}
+
+@media(max-width: 768px){
+    .hamburger{
+        display: block;
+    }
+
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-menu{
+        position:fixed;
+        left: -100%;
+        top: 70px;
+        gap: 0;
+        flex-direction: column;
+        background-color: #3e6641;
+        width: 100%;
+        text-align:center;
+        transition: 0.3s;
+    }
+
+    .nav-item{
+        margin: 16px 0;
+    }
+
+    .nav-menu.active{
+        left: 0;
+    }
+}
+
+
+
+/* .nav_links li{
     display: inline-block;
     padding: 0px 20px;
 }
@@ -28,11 +108,11 @@ header li, a, button{
 }
 .nav_links li a:hover{
     color: #5e9d62;
-}
+} */
 button{
     padding: 9px 25px;
-    color: #5e9d62;
-    background-color: rgba(62,102,65,1); /*we use rgba because we are dealing with opactiy changes with the button*/
+    color:#3e6641;
+    background-color: rgba(245,239,220,1); /*we use rgba because we are dealing with opactiy changes with the button*/
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -40,8 +120,15 @@ button{
 
 }
 button:hover{
-    background-color: rgba(62,102,65,0.8);
+    background-color: rgba(245,239,220,0.8);
 }
+
+
+
+
+
+
+
 body{
     background-color: #f5efdc;
 }
