--- a/style.css
+++ b/style.css
@@ -8,13 +8,9 @@
     box-sizing:border-box;
 }
 header {
-    /* box-sizing: border-box;
-    margin: 0;
-    padding: 30px 10%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; */
     background-color: #3e6641;
+    position:fixed;
+    width: 100%;
 }
 header li, a{
     font-family: "Source Sans 3", serif;
@@ -58,7 +54,7 @@ header li, a{
     margin: 5px auto;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: white;
+    background-color: #f5efdc;
 }
 
 @media(max-width: 768px){
@@ -142,6 +138,7 @@ ul{
     align-items: center;
     flex-wrap: wrap;
     gap: 20px;
+    padding-top: 130px;
     margin-right: 10%;
     margin-left: 10%;
 }
