--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ ul{
     display: flex;  
     /* align-items: flex-start; */
     align-items: center;
+    flex-direction:column;
     flex-wrap: wrap;
     gap: 20px;
     padding-top: 130px;
