--- a/style.css
+++ b/style.css
@@ -125,6 +125,12 @@ h1{
     color: #3e6641;
     font-size: 5em;
 }
+h4{
+    font-family: "Source Sans 3", serif;
+    font-weight: bold;
+    font-size: 1.2em;
+    color: #3e6641;
+}
 p {
     font-family: "Source Sans 3", serif;
 }
