--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 /* Green color code: #3e6641;*/
+/* Dark blue color code: 0b0030*/
+/* Light purple color code: #e4dcf5 */
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 
@@ -8,7 +10,7 @@
     box-sizing:border-box;
 }
 header {
-    background-color: #3e6641;
+    background-color: #0b0030;
     position:fixed;
     width: 100%;
 }
@@ -16,7 +18,7 @@ header li, a{
     font-family: "Source Sans 3", serif;
     font-weight: 500;
     font-size: 16px;
-    color: #f5efdc;
+    color: #e4dcf5;
     text-decoration: none;
 }
 .navbar li{
@@ -40,7 +42,7 @@ header li, a{
 
 .nav-link:hover{
     transition: all 0.3s ease 0s;
-    color: #7e8f64;
+    color: #b8da85;
 }
 
 .hamburger{
@@ -79,7 +81,7 @@ header li, a{
         top: 70px;
         gap: 0;
         flex-direction: column;
-        background-color: #3e6641;
+        background-color: #ff0000;
         width: 100%;
         text-align:center;
         transition: 0.3s;
@@ -106,7 +108,7 @@ button{
 
 }
 button:hover{
-    background-color: rgba(245,239,220,0.8);
+    background-color: #e4dcf5;
 }
 
 
@@ -116,20 +118,20 @@ button:hover{
 
 
 body{
-    background-color: #f5efdc;
+    background-color: #0b0030;;
 }
 
 h1{
     text-align: center;
     font-family: "Abril Fatface", serif;
-    color: #3e6641;
+    color: #e4dcf5;
     font-size: 5em;
 }
 h4{
     font-family: "Source Sans 3", serif;
     font-weight: bold;
     font-size: 1.2em;
-    color: #3e6641;
+    color: #e4dcf5;
 }
 p {
     font-family: "Source Sans 3", serif;
@@ -155,7 +157,7 @@ ul{
 /*Style for header2 in about secion*/
 h2{
     font-family: "Abril Fatface", serif;
-    color: #3e6641;
+    color: #e4dcf5;
     font-size: 3em;
 }
 .about h2{
@@ -165,12 +167,12 @@ h2{
 }
 
 .about p{
-    color: #3e6641;
+    color: #e4dcf5;
     font-weight: 500;
 }
 
 .about ul{
-    color: #3e6641;
+    color: #e4dcf5;
     font-weight: 500;
 }
 
@@ -199,7 +201,7 @@ h3{
     /* text-align: center; */
     text-align:left;
     font-family: "Abril Fatface", serif;
-    color: #3e6641;
+    color: #e4dcf5;
     font-size: 1.5em;
     margin-bottom: 10px;
 }
@@ -214,7 +216,7 @@ h3{
     flex-direction:column;
 }
 #quick-links-container a{
-    color:#3e6641;
+    color:#2069c4;
     text-decoration:underline dashed;
     transform: scale(1);
     transition: all 0.3s ease-in-out 0s;
@@ -287,14 +289,4 @@ h3{
 .info-box a{
     color:#3e6641;
     text-decoration:underline dashed;
-}
-
-
-.resume-holder {
-    padding: 20px;
-}
-
-.resume-holder iframe {
-    width: 100%;
-    height: 600px;   
 }
